it compiles again, though almost all tests fail